# ConanBrowser

./: .gitignore  CMakeLists.txt  ConanBrowser.pro  ConanHelper.qml  LICENSE  PackageListView.qml  README.md  RemoteView.qml  main.cpp  main.qml  qml.qrc
res/: ConanHelper.qml  PackageInfo.qml  PackageListView.qml  PackageModel.qml  RemoteModel.qml  RemoteView.qml  main.qml  qml.qrc
src/: conanhelper.cpp  conanhelper.h
